[package]
name = "screen-cut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.5.3"
image = "0.23.14"
rusttype = "0.9.2"
minifb = "0.24.0"
native-windows-gui = "1.0.13"
winit = "0.28.3"